# texdet

./: .gitignore  README.md  config.py  graphix.py  main.py  pyproject.toml  texture_detector.py
dct/: image_dct.py
post_proc/: base_postprocessor.py  postprocessor.py
pre_proc/: base_preprocessor.py  preprocessor.py
