[tool.poetry]
name = "texdet"
version = "0.1.0"
description = ""
authors = ["Justica <atsuronreplaced@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
scipy = "^1.9.0"
tqdm = "^4.64.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
